# eer-hal

./: .gitignore  CMakeLists.txt  README.md
docs/: hal_requirements.md
include/: eer_hal.h  eer_hal_adc.h  eer_hal_errors.h  eer_hal_gpio.h  eer_hal_i2c.h  eer_hal_power.h  eer_hal_spi.h  eer_hal_system.h  eer_hal_timer.h  eer_hal_uart.h  macros.h
tests/: CMakeLists.txt  test_gpio.c  test_hal.c
toolchain/: generic-gcc-avr.cmake  generic-gcc-riscv.cmake  generic-gcc-tc32.cmake
